# PR_Review_RL_Environment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml
data/scenarios/: easy_001_off_by_one.json  easy_002_null_dereference.json  easy_003_hardcoded_secret.json  easy_004_div_by_zero.json  easy_005_clean_refactor.json  easy_006_clean_docs.json  easy_007_clean_pagination.json  easy_007_missing_import.json  easy_008_clean_retry.json  easy_008_wrong_operator.json  hard_001_race_condition.json  hard_002_sort_comparator.json  hard_002_toctou.json  hard_003_timing_attack.json  hard_003_toctou.json  hard_004_cache_invalidation.json  hard_004_late_binding_closure.json  hard_005_sort_comparator.json  hard_005_timing_attack.json  hard_006_cache_invalidation.json  hard_006_clean_atomic_counter.json  hard_007_clean_complex_algo.json  hard_007_clean_token_verify.json  hard_008_yaml_deserialization.json  medium_001_sql_injection.json  medium_002_mutable_default.json  medium_003_missing_auth.json  medium_004_path_traversal.json  medium_005_cross_file_logic.json  medium_006_clean_db_migration.json  medium_006_swallowed_exc.json  medium_007_clean_event_bus.json  medium_007_clean_feature.json  medium_008_clean_fix.json  medium_009_xss_vulnerability.json
src/: api.py  app.py  env.py  grader.py  models.py
