[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-hackathon-submission"
version = "0.1.0"
description = "My hackathon submission"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"